# oubre

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
extras/: breakpoint_handler_asm.txt  core_command.txt  custom_target_with_comments.json  host_target.json  locking.c  macros.rs  main_snippets.rs  mem_snippets.rs  mutexes.c  scancodes.rs  vga_buff_writer.c
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
