[package]
name = "oubre_os"
version = "0.1.0"
edition = "2018"
author = ["Rasheed Starlet <starletgh@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# profile used for `cargo build`
# disabling stack unwindle during panics
[profile.dev]
panic = 'abort'

# profile used for `cargo build --release`
# disabling stack unwindle during panics
[profile.release]
panic = 'abort'

[dependencies]
bootloader = "0.9.23"
