[package]
name = "oubre_os"
version = "0.1.0"
edition = "2018"
authors = ["Rasheed Starlet <starletgh@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# profile used for `cargo build`
# disabling stack unwindle during panics
# [profile.dev]
# panic = "abort"

# # profile used for `cargo build --release`
# # disabling stack unwindle during panics
# [profile.release]
# panic = "abort"

[dependencies]
bootloader = "0.9.23"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
        "-device", 
        "isa-debug-exit,iobase=0xf4,iosize=0x04",
        "-serial", 
        "stdio",
        #"-display", 
        #"none"
    ]
test-success-exit-code = 33     # (0x10 << 1) | 1
test-timeout = 300              # custom test timeout 

# for integration test that have only one test funcs,
# we can run them as executables by calling them 
# in the entry point function - without needing the test runner
[[test]]
name = "should_panic"
harness = false
