[package]
name = "oubre_os"
version = "0.1.0"
edition = "2018"
authors = ["Rasheed Starlet <starletgh@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# profile used for `cargo build`
# disabling stack unwindle during panics
# [profile.dev]
# panic = "abort"

# # profile used for `cargo build --release`
# # disabling stack unwinding during panics
# [profile.release]
# panic = "abort"

[dependencies]
bootloader = "0.9.23"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
# Initially this project used phils implementation found here
# https://docs.rs/pic8259/0.10.1/pic8259/index.html 
# I identified some typos and made changes to it, creating a pull request
# At the time of writing this, Phil hasn't accepted the request yet
# I decided to use my local fork of this fork of his implementation
# with my changes here. 
# If you are trying to build this, you can find my forked version on github at
# https://github.com/Virux/pic8259 
# You can simply comment line 35 out like in line 34(just for demo) 
# and uncomment line 36 to use Phil's code and it will compile just fine.
# pic8259 = { version = "0.10.2", path = "../../contrib/pic8259" }
pic8259 = { version = "0.10.2", path = "../../contrib/pic8259" }
#pic8259 = "0.10.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
        "-device", 
        "isa-debug-exit,iobase=0xf4,iosize=0x04",
        "-serial", 
        "stdio",]
        #"-display",
        #"none"
    #]
test-success-exit-code = 33     # (0x10 << 1) | 1
test-timeout = 300              # custom test timeout 

# for integration test that have only one test funcs,
# we can run them as executables by calling them 
# in the entry point function - without needing the test runner
[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false 
